# src/main/kotlin/com/wutsi/membership/manager/dto/PlaceSummary.kt
@@ -1,0 +1,12 @@
+package com.wutsi.membership.manager.dto
+
+import kotlin.Long
+import kotlin.String
+
+public data class PlaceSummary(
+    public val id: Long = 0,
+    public val name: String = "",
+    public val longName: String = "",
+    public val country: String = "",
+    public val type: String = ""
+)
