# src/main/kotlin/com/wutsi/membership/manager/dto/SearchPlaceRequest.kt
@@ -1,0 +1,12 @@
+package com.wutsi.membership.manager.dto
+
+import kotlin.Int
+import kotlin.String
+
+public data class SearchPlaceRequest(
+    public val keyword: String? = null,
+    public val type: String? = null,
+    public val country: String? = null,
+    public val limit: Int = 100,
+    public val offset: Int = 0
+)
