# src/main/kotlin/com/wutsi/membership/manager/dto/SearchPlaceResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.membership.manager.dto
+
+import kotlin.collections.List
+
+public data class SearchPlaceResponse(
+    public val places: List<PlaceSummary> = emptyList()
+)
